# werun

./: .gitignore  AGENTS.md  Cargo.toml  build.rs  config.toml  generate_config.py  rustfmt.toml  werun.rc  开发计划.md
.cargo/: config.toml
assets/: create_icon.py
src/: lib.rs  main.rs  window_manager.rs
src/app/: mod.rs
src/core/: config.rs  config_manager.rs  mod.rs  plugin.rs  search.rs  theme.rs  themes.rs
src/platform/: mod.rs  windows.rs
src/plugins/: app_launcher.rs  calculator.rs  clipboard.rs  color_picker.rs  command_executor.rs  custom_commands.rs  file_search.rs  mod.rs  system_commands.rs  task_manager.rs  web_search.rs  window_switcher.rs
src/ui/: launcher_window.rs  mod.rs  preview_panel.rs  result_item.rs  result_list.rs  search_bar.rs
src/utils/: clipboard.rs  fuzzy.rs  icons.rs  mod.rs
