[package]
name = "werun"
version = "0.1.0"
edition = "2021"
rust-version = "1.81"

[dependencies]
# GPUI 核心框架 - Zed 编辑器团队开发的 GPU 加速 UI 框架
# 使用 gpui-component 依赖的相同版本
gpui = { git = "https://github.com/zed-industries/zed" }

# gpui-component - 丰富的 UI 组件库
gpui-macros = "0.2.2"
gpui-component = { git = "https://github.com/linruohan/gpui-component.git" }
gpui-component-assets = { git = "https://github.com/linruohan/gpui-component.git" }
# Windows API 绑定
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_System_LibraryLoader",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Com",
    "Win32_Storage_FileSystem",
    "Win32_Graphics_Gdi",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_System_Registry",
    "Win32_UI_HiDpi",
] }

# 异步运行时
tokio = { version = "1.42", features = ["full"] }

# 序列化
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# 配置管理
config = "0.14"

# 模糊搜索 - 高性能模糊匹配引擎
nucleo = "0.5"

# 剪贴板操作
clipboard-rs = "0.2"

# 图像处理 - 用于图标提取和显示
image = { version = "0.25", default-features = false, features = ["png", "ico"] }

# 错误处理
anyhow = "1.0"
thiserror = "2.0"

# 并发工具
parking_lot = "0.12"
dashmap = "6.1"
once_cell = "1.20"

# 日志
log = "0.4"
env_logger = "0.11"

# 时间处理
chrono = { version = "0.4", features = ["serde"] }

# 系统目录
dirs = "5.0"

# 路径处理
path-absolutize = "3.1"

# 快捷方式解析
lnk = "0.5"

# 数学表达式解析
eval = "0.4"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.dev]
opt-level = 0
debug = true
